# WineCharm

./: # deepseek 32bit help.py  ### TEMP.py  .gitignore  .update-timestamp  INSTALL.md  MANIFEST.in  README.md  Todo.md  adw.dialog.py  adw.py  adw2.py  adw_row.py  adw_row2.py  adw_row3.py  adw_row4.py  adw_status.py  backup_progress.py  basic2.py  basic3.py  basic4.py  boxlist.py  build.sh  create_bottle_old.py  create_translation_commands.md  def show_options_for_script(self, ui_sta.py  et --hard 389cc403bbd9eb1822179c7ab919c3d8b8e2e420  find_duplicate_methods.sh  fix open.py  fix_wzt_and_create_exe_files.py  fixme.txt  helpful_methods.py  io.github.fastrizwaan.WineCharm.appdata.xml  io.github.fastrizwaan.WineCharm.desktop  method_name.py  pids.py  process_cli_file.py  pyproject.toml  q  restore_wzt12.py  restore_wzt13.py  (+155 more)
data/appdata/: io.github.fastrizwaan.WineCharm.appdata.xml  io.github.fastrizwaan.WineCharm.metainfo.xml
data/mimetype/: winecharm-backup-file.xml
flatpak/: build.sh  build_flatpak_bundle.sh  icons  install.sh  io.github.fastrizwaan.WineCharm.desktop  io.github.fastrizwaan.WineCharm.metainfo.xml  io.github.fastrizwaan.WineCharm.yaml  run.sh  test-user-install.sh  wcterm.py  winecharm.py  winecharm_search_0.3.py
locale/hi/LC_MESSAGES/: io.github.fastrizwaan.WineCharm.mo
po/: LINGUAS  README.md  ar.po  de.po  es.po  fr.po  hi.po  id.po  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ru.po  tr.po  winecharm.pot  zh_CN.po
scripts/: i18n.sh  i18n_fill_ui_terms.py  i18n_fix_placeholders.py  i18n_mt_fill.py  i18n_qa.py
src/: winecharm.py  winecharm.py.import-winezgui_to_be_improved.py  winecharm.py.winezgui_import2.py
src/winecharm/: backup.py  check_required_programs.py  create_script.py  i18n.py  import_game_dir.py  import_wine_dir.py  restore.py  runner_manager.py  save_load_users_dir.py  script_options.py  set_wine_arch.py  settings.py  single_prefix.py  template_manager.py  ui.py  wcterm.py  winecharm.py  winezgui_importer.py
src/winecharm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
temp/: add_desktop_shortcut.py  show_info_dialog.py  winecharm (4).py  winecharm.arch32.best.custom_copytree.py  winecharm.arch32.best.py  winecharm.arch32.py  winecharm.py  winecharm_delete_cancel_with_esc_not_crashing.py
