[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winecharm"
version = "0.99.3"
description = "A Charming Wine GUI for managing Wine prefixes and applications"
readme = "README.md"
authors = [
    { name = "Mohammed Asif Ali Rizvan", email = "fast.rizwaan@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = [
    "PyYAML>=5.3",
    "psutil>=5.7",
    "PyGObject>=3.36",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Topic :: System :: Emulators",
]
keywords = ["wine", "wineprefix", "winetricks", "gui", "gtk", "emulation"]

[project.urls]
Homepage = "https://github.com/fastrizwaan/WineCharm"
Repository = "https://github.com/fastrizwaan/WineCharm"
Documentation = "https://github.com/fastrizwaan/WineCharm/wiki"
Issues = "https://github.com/fastrizwaan/WineCharm/issues"

[project.scripts]
winecharm = "winecharm.winecharm:main"
wcterm = "winecharm.wcterm:main"

[tool.setuptools]
packages = ["winecharm"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
winecharm = ["data/**/*"]

[tool.setuptools.data-files]
"share/applications" = ["data/shortcut/io.github.fastrizwaan.WineCharm.desktop"]
"share/metainfo" = ["data/appdata/io.github.fastrizwaan.WineCharm.metainfo.xml"]
"share/mime/packages" = ["data/mimetype/winecharm-backup-file.xml"]
"share/icons/hicolor/scalable/apps" = ["data/icons/io.github.fastrizwaan.WineCharm.svg"]
"share/icons/hicolor/128x128/apps" = ["data/icons/org.winehq.Wine.png"]
"share/icons/hicolor/scalable/actions" = ["data/icons/*-symbolic.svg"]

[tool.winecharm.system-dependencies]
required = [
    "wine",
    "winetricks",
    "wrestool",
    "icotool",
    "exiftool",
    "xdg-utils",
    "procps",
    "wget",
    "zstd",
    "winbind",
    "libgtk-3-0",
    "gir1.2-gtk-3.0",
]
debian-packages = [
    "wine",
    "wine32",
    "wine64",
    "winetricks",
    "icoutils",
    "libimage-exiftool-perl",
    "xdg-utils",
    "procps",
    "wget",
    "zstd",
    "winbind",
    "libgtk-3-0",
    "gir1.2-gtk-3.0",
    "python3-dev",
    "python3-yaml",
    "python3-psutil",
    "python3-gi",
]
fedora-packages = [
    "wine",
    "winetricks",
    "icoutils",
    "perl-Image-ExifTool",
    "xdg-utils",
    "procps-ng",
    "wget",
    "zstd",
    "samba-winbind",
    "gtk3",
    "python3-gobject",
    "python3-pyyaml",
    "python3-psutil",
]
